add user service with security
