# src/main/java/com/example/bankcards/controller/UserController.java
@@ -1,0 +1,57 @@
+package com.example.bankcards.controller;
+
+import com.example.bankcards.dto.UserDto;
+import com.example.bankcards.dto.request.UserCreateRequest;
+import com.example.bankcards.dto.request.UserUpdateRequest;
+import com.example.bankcards.service.UserService;
+import lombok.RequiredArgsConstructor;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.http.HttpStatus;
+import org.springframework.validation.annotation.Validated;
+import org.springframework.web.bind.annotation.*;
+import jakarta.validation.Valid;
+
+@RestController
+@RequestMapping("api/v1/users")
+@RequiredArgsConstructor
+@Validated
+public class UserController {
+
+    private final UserService userService;
+
+    @PostMapping
+    @ResponseStatus(HttpStatus.CREATED)
+    public UserDto createUser(@RequestBody @Valid UserCreateRequest request) {
+        return userService.createUser(request);
+    }
+
+    @GetMapping("/{id}")
+    public UserDto getUser(@PathVariable Long id) {
+        return userService.getUserById(id);
+    }
+
+    @GetMapping
+    public Page<UserDto> getUsers(
+            @RequestParam(required = false) String search,
+            @RequestParam(defaultValue = "0") int page,
+            @RequestParam(defaultValue = "10") int size
+    ) {
+        return userService.getUsers(search, PageRequest.of(page, size));
+    }
+
+    @PutMapping("/{id}")
+    public UserDto updateUser(
+            @PathVariable Long id,
+            @RequestBody @Valid UserUpdateRequest request
+    ) {
+        var upd = new UserUpdateRequest(id, request.password(), request.role());
+        return userService.updateUser(upd);
+    }
+
+    @DeleteMapping("/{id}")
+    @ResponseStatus(HttpStatus.NO_CONTENT)
+    public void deleteUser(@PathVariable Long id) {
+        userService.deleteUser(id);
+    }
+}
