# src/main/java/com/example/bankcards/dto/UserDto.java
@@ -1,0 +1,9 @@
+package com.example.bankcards.dto;
+
+import com.example.bankcards.enums.Role;
+
+public record UserDto(
+        Long id,
+        String username,
+        Role role
+) {}
