# src/main/java/com/example/bankcards/entity/Card.java
@@ -1,0 +1,47 @@
+package com.example.bankcards.entity;
+
+import com.example.bankcards.enums.CardStatus;
+import jakarta.persistence.*;
+import lombok.*;
+
+import java.math.BigDecimal;
+import java.time.LocalDate;
+import java.util.List;
+
+@Entity
+@Table(name = "cards")
+@Getter
+@Setter
+@NoArgsConstructor
+@AllArgsConstructor
+@Builder
+public class Card {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    private Long id;
+
+    @Column(nullable = false, unique = true, length = 32)
+    private String cardNumberEncrypted;
+
+    @ManyToOne(fetch = FetchType.LAZY)
+    @JoinColumn(name = "owner_id", nullable = false)
+    private User owner;
+
+    @Column(nullable = false)
+    private LocalDate expiryDate;
+
+    @Enumerated(EnumType.STRING)
+    @Column(nullable = false, length = 20)
+    private CardStatus status;
+
+    @Column(nullable = false, precision = 19, scale = 2)
+    private BigDecimal balance;
+
+    // Удаление карты удаляет все связанные переводы
+    @OneToMany(mappedBy = "fromCard", cascade = CascadeType.ALL, orphanRemoval = true)
+    private List<CardTransfer> outgoingTransfers;
+
+    @OneToMany(mappedBy = "toCard", cascade = CascadeType.ALL, orphanRemoval = true)
+    private List<CardTransfer> incomingTransfers;
+}
